@@ -10,6 +10,9 @@ This file lists the incompatible changes between Version 2.x and older versions
   - limitnum / asympnum: remove useless optional parameter 'muli/k'
     [now implicitly set to 1, not to 20]: just extrapolate u(muli*n).
   - besseln is now obsolete, use bessely
+  - polinterpolate(X,Y,t,&e): e is now more precisely defined and the
+    error estimate is given as a binary exponent; compared to the value
+    dy returned up to this change, we have e = exponent(dy).
 
 * Specific to the PARI library:
 ===============================
