@@ -4,7 +4,7 @@ Mod(1, 7)
 -1/6*x^2 + 3/2*x + 2/3
 Mod(3, 7)
 2.5416666666666666666666666666666666667
-0.041666666666666666666666666666666666667
+-5
 0
 0
 2
@@ -41,4 +41,4 @@ Mod(1, 2)
 [-x + y, x]
 [z - x, z]
 [z + (-x + 1), z]
-Total time spent: 0
+Total time spent: 1
